--- a/tienda/templates/tienda/inc/navbar.html
+++ b/tienda/templates/tienda/inc/navbar.html
@@ -7,17 +7,41 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            <a class="nav-link " aria-current="page" href="{% url 'home' %}">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'catalog' %}">Catalogo</a>
           </li>
+
+          {% if request.user.is_authenticated %}
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{ request.user }}
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesion</a></li>
+            </ul>
+          
+        </li>
+
+          {% else %}
+
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="{% url 'loginpage' %}" >iniciar sesion</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="{% url 'register' %}">Registro</a>
           </li>
+
+          {% endif %}
+
+          
+                    
+          
         </ul>
       </div>
     </div>
