--- a/tienda/templates/tienda/layouts/main.html
+++ b/tienda/templates/tienda/layouts/main.html
@@ -1,5 +1,7 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +11,10 @@
         {% endblock title %}
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.min.css"/>
+
+
 <style>
     a{
         text-decoration: none;
@@ -23,7 +29,19 @@
 
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+     <script src="{% static '/js/jquery-3.6.2.min.js' %}"> </script>
+    <script src="{% static '/js/custom.js' %}"> </script>
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 
      {% block scripts %}{% endblock scripts %}
+
+     <script>
+        alertify.set('notifier','position', 'top-center');
+
+        {%for msg in messages %}
+        alertify.success('{{msg}}');
+
+        {% endfor %}
+     </script>
 </body>
 </html>
