--- a/tienda/templates/tienda/products/view.html
+++ b/tienda/templates/tienda/products/view.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="card shadow">
+                <div class="card shadow product_data">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
@@ -39,9 +39,10 @@
                                     <label class="badge bg-danger"> Sin stock </label>
                                 {% endif %}
                                 <div class="row mt-2">
+                                    <label for='Quantity'>Cantidad</label>
                                     <div class="input-group text-center mb-3" style="width: 130px">
                                         <button class="input-group-text decrement-btn">-</button>
-                                        <input type="text" name="quantity" class="form-control text-center" value="1">
+                                        <input type="text" name="quantity" class="form-control qty-input text-center" value="1">
                                         <button class="input-group-text increment-btn">+</button>
                                     </div>  
                                 </div>
