--- a/tienda/templates/tienda/products/view.html
+++ b/tienda/templates/tienda/products/view.html
@@ -39,19 +39,23 @@
                                     <label class="badge bg-danger"> Sin stock </label>
                                 {% endif %}
                                 <div class="row mt-2">
-                                    <label for='Quantity'>Cantidad</label>
-                                    <div class="input-group text-center mb-3" style="width: 130px">
-                                        <button class="input-group-text decrement-btn">-</button>
-                                        <input type="text" name="quantity" class="form-control qty-input text-center" value="1">
-                                        <button class="input-group-text increment-btn">+</button>
-                                    </div>  
+                                    <div class="col-md-3">
+                                        {% csrf_token %}
+                                        <input type="hidden" value="{{ products.id }}"  class="prod_id">
+                                        <label for='Quantity'>Cantidad</label>
+                                        <div class="input-group text-center mb-3" style="width: 130px">
+                                            <button class="input-group-text decrement-btn">-</button>
+                                            <input type="text" name="quantity" class="form-control qty-input text-center" value="1">
+                                            <button class="input-group-text increment-btn">+</button>
+                                        </div>  
+                                    </div>
                                 </div>
                                 <div class="col-md-9">
                                     <br>
                                     {% if products.quantity > 0 %}
-                                        <button type="button " class="btn btn-primary me-3 float-start"> Agregar al carro</button>
+                                        <button type="button " class="btn btn-primary me-3 float-start addToCartBtn"  > Agregar al carro</button>
                                     {% endif %}    
-                                        <button type="button" class="btn btn-success me-3 float-start">Agregar a la lista de deseados</button>
+                                        <button type="button" class="btn btn-success me-3 float-start" >Agregar a la lista de deseados</button>
                                 </div>
                             </div>
                         </div>
